
cc_library(
	name = "convert",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_parameter//:parameter",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_function_types//:function_types",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_spirit//:spirit",
		"@com_github_bazelboost_math//:math"
	],
)
